k8s/packages-spack-io/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spack-packages
  labels:
    app: spack-packages
    svc: web
spec:
  selector:
    matchLabels:
      app: spack-packages
      svc: web
  replicas: 2
  template:
    metadata:
      labels:
        app: spack-packages
        svc: web
    spec:
      containers:
      - name: web
        image: "spack/packages.spack.io:latest"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
      nodeSelector:
        spack.io/node-pool: base
