k8s/packages-spack-io/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spack-packages
  labels:
    app: spack-packages
    svc: web
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: spack-packages
    svc: web
